	  to GtkDialog, make dialog interactive (trash two buttons),
	  enlarge the notes area, making it usable.
	* gtt.scm, time-interval.ghtml:  add filter to make the
	  HTML diary display resemble the plain-text diary markup.
	* idle-dialog.c: if project names had a bare & in them, then
	  Pango would not display properly.  Change to escape & into &amp;

Sun Apr 25 2004 Linas Vepstas <linas@linas.org>
	* Prep for 2.2.0 release: tag gnotime-2-2-0

Wed Apr 21 2004 Linas Vepstas <linas@linas.org>
	* prefs.c, props-proj.c props-task.c: Fix core dump 
	  when user clicks on 'help' button.
	* journal.c: Fix coredump/hang due to double-free
	* menus.c: Fix memory-corruption/core-dump bug.
	* gconf-io-p.h: Fix core dump when saving NULL strings.
	* journal.c: Fix flyover help so that it actually shows project text.
	* journal.c: remember last file that user saved to.
	* journal.c: add support for images (png/jpeg/gif/etc.)
	* ghtml.c, ghtml.h: add support for include files
	* gtt.css: add rudimentary CSS Cascading Style Sheet.
	* *.ghtml: rework all reports to use a new style
	* journal.ghtml: create new nicer display style.
	* journal.c: add report publication dialog.
	* Makefile.am: install gnotime.desktop in the correct directory.
	* plug-in.c: use GnomeVFS for user-specified reports.
	* export.c: use GnomeVFS for data export.
	* ghtml.c: use GnomeVFS for report template input.
	* journal.c: use GnomeVFS for HTML output save.
	* log.c: use GnomeVFS for output logging.
	* journal.c: add 'copy' to the task popup menu

Tues Apr 20 2004 Linas Vepstas <linas@linas.org>
	* Prep for 2.1.9 release: tag gnotime-2-1-9

Sat Apr 10 2004 Linas Vepstas <linas@linas.org>
	* lib/libqofsql/*: All new SQL expression parsing code.
	* lib/qof/*: Sync with QOF source trees.
	* src/journal.c. ghtml/C/query.ghtml: Start using SQL and 
	  SQL parser to construct user-defined report queries.
	* src/menucmd.c, src/ctree.c: fix sourceforge bug
	  [ 898481 ] inconsistency with Cut and Paste