@@ -1,5 +1,5 @@
 %define name gnotime
-%define ver 2.2.0
+%define ver 2.2.1
 %define rel 1
 %define prefix /usr
 
